--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ben's Website</title>
-    <link rel="stylesheet" href="ben.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="icon" href="favicon (1).ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
