--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <div class="top"> 
-        <img class="upcloud"  src="/Project1/CSS - My Site Images/cloud.png" alt="Cloud-Image">
+        <img class="upcloud"  src="/My Site Images/cloud.png" alt="Cloud-Image">
         <h1>I'm Ben Buhbut.</h1>
         <h2 class="prog">a <span class="Pro">pro</span>grammer.</h2>
-        <img class="downcloud" src="/Project1/CSS - My Site Images/cloud.png" alt="Cloud-Image">
-        <img src="/Project1/CSS - My Site Images/mountain.png" alt="Mountain-Image">
+        <img class="downcloud" src="/My Site Images/cloud.png" alt="Cloud-Image">
+        <img src="My Site Images/mountain.png" alt="Mountain-Image">
     </div>
      <div class="middle">
         <div class="profile">
