--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>I'm Ben Buhbut.</h1>
         <h2 class="prog">a <span class="Pro">pro</span>grammer.</h2>
         <img class="downcloud" src="/BenB-First-CSS-and-HTML-project/CSS - My Site Images/cloud.png" alt="Cloud-Image">
-        <img src="/BenB-First-CSS-and-HTML-project/CSS - My Site Images" alt="Mountain-Image">
+        <img src="BenB-First-CSS-and-HTML-project/CSS - My Site Images/mountain.png" alt="Mountain-Image">
     </div>
      <div class="middle">
         <div class="profile">
